# django-google-places

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  boot_django.py  load_tests.py  requirements_dev.txt  setup.cfg  tox.ini
places/: __init__.py  admin.py  clients.py  models.py  tests.py  translation.py  urls.py  views.py  wrappers.py
places/migrations/: 0001_initial.py  0002_auto_20190827_0948.py  0003_auto_20190827_1106.py  0004_auto_20190828_0727.py  0005_auto_20190917_0828.py
places/tests/: test_models.py  test_wrappers.py
