[metadata]
name = django-google-places
version = 0.1
description = A Django app for autocomplete addresses from the google place.
long_description = file: README.rst
url = https://github.com/cryptster/django-google-places
license = GNU GPL v3.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django >= 2.2
    googlemaps == 4.2.0
    django-countries == 6.1.2
test_suite = load_tests.get_suite