[metadata]
name = django-google-places
version = 0.1
description = A Django app for autocomplete addresses from the google place.
long_description = file: README.rst
url = https://github.com/cryptster/django-google-places
license = GNU GPL v3.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
python_requires = >=3.7
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django >= 2.2
    googlemaps == 4.2.0
test_suite = load_tests.get_suite

[flake8]
max-line-length = 79
extend-ignore = E203, W503

[isort]
known_third_party = django,django_countries,googlemaps,modeltranslation,setuptools
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 79
